# CC232

./: .gitignore  CMakeLists.txt  README.md
actividad/: actividad-2.md  actividad-3.md  actividad-4.md  actividad-5.md  actividad-6.md
examen/: respuestas_parcial.md
pc-2/: CMakeLists.txt
pc-2/include/: solution.h
pc-2/src/: main.cpp  solution.cpp
practica/pc-2/: CMakeLists.txt  README.md
practica/pc-2/bench/: CMakeLists.txt  bench_longest_subarray.cpp
practica/pc-2/demos/: CMakeLists.txt  demo_longest_subarray.cpp
practica/pc-2/docs/: monotonic_deque.md
practica/pc-2/src/: main.cpp  solution.cpp
practica/pc-2/tests/: CMakeLists.txt  longest_subarray_identical_elements_test.cpp  longest_subarray_naive_limit_break_test.cpp  longest_subarray_naive_single_element_valid_test.cpp  longest_subarray_shrinking_window_test.cpp
practica/pc-3/: CMakeLists.txt  README.md
practica/pc-3/demos/: CMakeLists.txt  demo_frequency_stack.cpp
practica/pc-3/docs/: bitacora.md  frequency_stack.md  respuestas_obligatorias.md
practica/pc-3/include/: frequency_stack.h  frequency_stack_naive.h
practica/pc-3/resultados/: casos_borde.md  ejecucion_pc3.md  tests_pc3.md
practica/pc-3/src/: main.cpp
practica/pc-3/tests/: CMakeLists.txt  frequency_stack_duplicates_tie_break_test.cpp  frequency_stack_empty_test.cpp  frequency_stack_invariant_test.cpp  frequency_stack_leetcode_example_test.cpp  frequency_stack_minimal_case_test.cpp  frequency_stack_naive_comparison_test.cpp  frequency_stack_single_value_test.cpp
