add_executable(longest_subarray_shrinking_window_test longest_subarray_shrinking_window_test.cpp)
target_link_libraries(longest_subarray_shrinking_window_test PRIVATE solution)
add_test(NAME longest_subarray_shrinking_window_test COMMAND longest_subarray_shrinking_window_test)

add_executable(longest_subarray_identical_elements_test longest_subarray_identical_elements_test.cpp)
target_link_libraries(longest_subarray_identical_elements_test PRIVATE solution)
add_test(NAME longest_subarray_identical_elements_test COMMAND longest_subarray_identical_elements_test)

add_executable(longest_subarray_naive_limit_break_test longest_subarray_naive_limit_break_test.cpp)
target_link_libraries(longest_subarray_naive_limit_break_test PRIVATE solution)
add_test(NAME longest_subarray_naive_limit_break_test COMMAND longest_subarray_naive_limit_break_test)

add_executable(longest_subarray_naive_single_element_valid_test longest_subarray_naive_single_element_valid_test.cpp)
target_link_libraries(longest_subarray_naive_single_element_valid_test PRIVATE solution)
add_test(NAME longest_subarray_naive_single_element_valid_test COMMAND longest_subarray_naive_single_element_valid_test)
