add_executable(frequency_stack_leetcode_example_test frequency_stack_leetcode_example_test.cpp)
target_include_directories(frequency_stack_leetcode_example_test PRIVATE ../include)
add_test(NAME frequency_stack_leetcode_example_test COMMAND frequency_stack_leetcode_example_test)

add_executable(frequency_stack_minimal_case_test frequency_stack_minimal_case_test.cpp)
target_include_directories(frequency_stack_minimal_case_test PRIVATE ../include)
add_test(NAME frequency_stack_minimal_case_test COMMAND frequency_stack_minimal_case_test)

add_executable(frequency_stack_empty_test frequency_stack_empty_test.cpp)
target_include_directories(frequency_stack_empty_test PRIVATE ../include)
add_test(NAME frequency_stack_empty_test COMMAND frequency_stack_empty_test)

add_executable(frequency_stack_duplicates_tie_break_test frequency_stack_duplicates_tie_break_test.cpp)
target_include_directories(frequency_stack_duplicates_tie_break_test PRIVATE ../include)
add_test(NAME frequency_stack_duplicates_tie_break_test COMMAND frequency_stack_duplicates_tie_break_test)

add_executable(frequency_stack_single_value_test frequency_stack_single_value_test.cpp)
target_include_directories(frequency_stack_single_value_test PRIVATE ../include)
add_test(NAME frequency_stack_single_value_test COMMAND frequency_stack_single_value_test)

add_executable(frequency_stack_naive_comparison_test frequency_stack_naive_comparison_test.cpp)
target_include_directories(frequency_stack_naive_comparison_test PRIVATE ../include)
add_test(NAME frequency_stack_naive_comparison_test COMMAND frequency_stack_naive_comparison_test)

add_executable(frequency_stack_invariant_test frequency_stack_invariant_test.cpp)
target_include_directories(frequency_stack_invariant_test PRIVATE ../include)
add_test(NAME frequency_stack_invariant_test COMMAND frequency_stack_invariant_test)
